fixed z-index that broke screenshots

--- a/src/fairfield-style-6-9-15.less
+++ b/src/fairfield-style-6-9-15.less
@@ -638,7 +638,7 @@
 		#scroll-link a {  color: #fabe00; letter-spacing: 1px; text-decoration: none; text-transform: uppercase; }
 		#scroll-link a:hover { color: #fff; }
 	
-	#main-container { clear: both; max-width: 960px; margin: 0 auto; padding: 20px; position: relative; z-index: 9; *zoom: 1; }
+	#main-container { clear: both; max-width: 960px; margin: 0 auto; padding: 20px; position: relative; *zoom: 1; }
 	#main-container:before,
 	#main-container:after { content: " "; display: table; }
 	#main-container:after { clear: both; }
